# study

./: .gitignore  CMakeLists.txt  build.sh  install-deps.sh
cplusplus/: CMakeLists.txt  build.sh  lcov.sh
cplusplus/comm/kernel/: container_of.h  list.h
cplusplus/comm/logging/: logging.c  logging.h
cplusplus/comm/utility/: forker_tools.cpp  forker_tools.h  string_format_tools.hpp  timer_tools.cc  timer_tools.h  worker_queue.hpp  worker_thread.cc  worker_thread.h  worker_threadpool.cc  worker_threadpool.h
cplusplus/fusefs/src/: fusefs_config.c
cplusplus/fusefs/src/mount/: fusefs_fuse_def.h  fusefs_fuse_fs.c  fusefs_fuse_fs_op.c  fusefs_storage.c  fusefs_storage_op.h
cplusplus/fusefs/src/mount/storages/libguestfs/: libguestfs_inter.c  libguestfs_inter.h
cplusplus/fusefs/src/mount/storages/passfs/: passfs_inter.c
cplusplus/fusefs/src/mount/storages/spfs/: spfs_bitmap.h  spfs_dir.h  spfs_file.h  spfs_inode.c  spfs_storage.h
cplusplus/jni/: CMakeLists.txt
cplusplus/jni/src/: jni_log.h  jni_so.c  jni_so.h  jni_so_export.c  jni_so_export.h
cplusplus/rest/client/: demo_router.h
cplusplus/rest/server/: CMakeLists.txt  httpd_main.cc
cplusplus/rest/server/src/: httpd_server.cpp  httpd_server.h
cplusplus/rest/server/src/http/: httpd_controller.h  httpd_handler.cpp  httpd_handler.h  httpd_router.cpp  httpd_router.h
cplusplus/rest/server/src/plugin/: httpd_root_controller.cpp  httpd_root_controller.h
cplusplus/rest/server/src/task/: utils_forker.h  utils_worker_queue.hpp  utils_worker_thread.cpp  utils_worker_thread.h  utils_worker_threadpool.h
cplusplus/rest/server/src/utils/: utils.cpp  utils.h
cplusplus/struct2json/: CMakeLists.txt  struct2json_main.cc
cplusplus/struct2json/src/: demo_struct.cc  demo_struct.h  reflectionTypeInfo.hpp  struct2json.cc  struct2json.h  struct2json_class_template.hpp  struct2json_function_template.hpp  struct2json_inc.h  struct2json_json_object.cc  struct2json_json_object.h  struct2json_json_serialize.cc  struct2json_json_serialize.h  struct2json_macro_reflection.h  struct2json_object_template.hpp  struct2json_reflection.h  struct2json_reflection_def.h  struct2json_reflection_def_func.h  struct2json_reflection_object.cc  struct2json_reflection_object.h  struct2json_reflection_template.hpp  struct2json_robject.cc  struct2json_robject.h  struct2json_traits_template.hpp  struct2json_type_traits.hpp  struct2json_variable_template.hpp  struct2json_variable_traits_template.hpp
cplusplus/struct2json_c/: CMakeLists.txt
cplusplus/struct2json_c/src/: demo_struct.h  struct2json_reflection.h
cplusplus/tcp_server/: .mgmt.c.swp  .tgtd.c.swp  CMakeLists.txt  bs.c  bs_rbd.c  log.c  log.h  mgmt.c  sbc.c  scc.c  scsi.c  scsi.h  spc.c  target.c  target.h  tcp_config.c  tcp_log.h  tcp_server.c  tcp_server.h  tcp_server_main.cc  tgtadm.c
cplusplus/tcp_server/iscsi/: .iscsi_tcp.c.swp  iscsi_tcp.c  iscsid.c  transport.c
cplusplus/tcp_server/src/: client_conn_driver.cc  client_conn_driver.h  config.cc  config.h  conn_config.h  conn_driver.h  epoller.cc  epoller.h  log.h  mgr.cc  mgr.h  mgr_conn_driver.cc  mgr_conn_driver.h  server.cc  server.h  server_conn_driver.cc  server_conn_driver.h  session.cc  session.h  session_mgr.cc  session_mgr.h  tcp_client_driver.h  tcp_config.cc  tcp_config.h  tcp_conn.cc  tcp_conn.h  tcp_conn_config.h  tcp_conn_driver.h  tcp_log.h  tcp_mgr.cc  tcp_mgr.h  tcp_mgr_driver.cc  tcp_mgr_driver.h  tcp_server.cc  tcp_server.h
kernel/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  build.sh  install-deps.sh  show_shared_ptr.hpp
src/app/src/: CMakeLists.txt
src/app/src/fusefs/: CMakeLists.txt  fusefs_main.c
src/app/src/fusefs/src/: fusefs_config.c  fusefs_config.h  fusefs_fs.h  fusefs_fuse_fs.c  fusefs_fuse_fs_op.c  fusefs_log.h  fusefs_storage.c  fusefs_storage.h  fusefs_storage_op.h  ysfs_config.c  ysfs_config.h  ysfs_log.h
src/app/src/fusefs/src/block/: vblock.c  vblock.h
src/app/src/fusefs/src/fs/: vfs.c  vfs.h  vfs_op.h
src/app/src/fusefs/src/fs/passfs/: passfs.c  passfs.h
src/app/src/fusefs/src/fuse/: fusefs_fuse.h  fusefs_fuse_block.c  fusefs_fuse_block_op.c  fusefs_fuse_def.h  fusefs_fuse_fs.c  fusefs_fuse_fs_op.c
src/app/src/fusefs/src/mount/: fusefs_fs.h  fusefs_fuse_fs.c  fusefs_fuse_fs_op.c  fusefs_storage.c  fusefs_storage.h
src/app/src/fusefs/src/storages/libguestfs/: libguestfs_inter.c  libguestfs_inter.h
src/app/src/netclient/: chk_order.h
src/app/src/rest/client/: controller.cc  demo_handler.cc  demo_handler.h  http_rest_manager.cc  http_service_manager.cc  root_controller.cc
src/app/src/rest/comm/: httplib_client.cc  httplib_client.h  httplib_comm.cc  httplib_comm.h  httplib_server.cc  httplib_server.h  httplib_ssl_client.cc  httplib_ssl_client.h  httplib_ssl_server.cc  httplib_ssl_server.h
src/app/src/rest/server/: httpd_main.cc
src/app/src/rest/server/src/: httpd_config.cpp  httpd_config.h  httpd_handler.cpp  httpd_handler.h  httpd_main.cpp  httpd_server.cpp  httpd_server.h
src/app/src/thridparty/fuse3/: libfuse3.la
src/app/src/thridparty/libguestfs/include/: guestfs.h
src/common/forker/: forker.cc  forker.h  ys_forker.h
src/common/string_format/: string_format.hpp
src/common/timer/include/: timer.h
src/common/timer/src/: timer.cpp
src/common/trace/: trace_entry.cc  trace_entry.h
src/common/workerQ/: WorkerQ.hpp
src/common/workerthread/: worker_thread.cc  worker_thread.h
src/common/workerthread/include/: worker_thread.h
src/demo_so/: CMakeLists.txt  demo_so.h  hello_so.cc  hello_so.h
src/demo_so/src/: demo_so.cc
src/httpd/: CMakeLists.txt  httpd_main.cc
src/httpd/include/: controller.h  http_handler.h  http_rest_manager.h  http_router.h  http_service_manager.h  root_controller.h
src/httpd/src/: controller.cc  demo_router.cc  http_service_manager.cc  root_controller.cc
src/include/: py_plugin.h  trace.h
src/plugin/lua/demo_so/: CMakeLists.txt  lua_call_hello_so.cc  lua_call_hello_so.h
src/scripts/lua/hello_so/: test_hello.lua
src/tests/: CMakeLists.txt
src/tests/demo_so/: CMakeLists.txt  test_demo_so_main.cc
(+39 files in other folders)
