############################################################################


############################################################################
# 设置源码
#--------------------------------------------------------------------------
#modlue hello_so
add_subdirectory(demo_so)
install(TARGETS demo_so LIBRARY DESTINATION ${prefix}/test/bin)


#--------------------------------------------------------------------------


